# rcqp

./: COPYING  DESCRIPTION  INSTALL  LICENCE  MD5  NAMESPACE  NEWS  README  cleanup  configure  configure.ac  configure.win  rcqp-Ex.R  svn-commit.2.tmp  svn-commit.tmp
R/: main.R  s3.R  zzz.R
inst/doc/: rcqp.Rnw
man/: corpus.Rd  cqi_attribute_size.Rd  cqi_attributes.Rd  cqi_corpus_info.Rd  cqi_cpos2id.Rd  cqi_dump_subcorpus.Rd  cqi_fdist.Rd  cqi_full_name.Rd  cqi_id2cpos.Rd  cqi_list_corpora.Rd  cqi_list_subcorpora.Rd  cqi_query.Rd  cqi_regex2id.Rd  cqi_struc2cpos.Rd  cqp_flist.Rd  cqp_ftable.Rd  cqp_kwic.Rd  cqp_registry.Rd  print.Rd  rcqp.Rd  region_sizes.Rd  size.Rd  sort.cqp_kwic.Rd  subcorpus.Rd  subset.Rd  summary.Rd  tokens.Rd  write.cqp_corpus.Rd
src/: MakefileCrossCompile.in  Makevars  Makevars.in  Makevars.win  makeRCompatible.c  makeRCompatible.h  makeRCompatible.txt  rcqp.h  rcqpCommands.c  rcqpCommands.h  rcqpUtils.c  rcqpUtils.h
src/cwb/: AUTHORS  CHANGES  COPYING  INSTALL  Makefile  MakefileRcqp.in  MakefileRcqpCrossCompile.in  README  config.mk  configRcqpCrossCompile.mk.in  definitions.mk
src/cwb/CQi/: auth.c  cqpserver.c  server.c
src/cwb/cl/: Makefile  attributes.c  attributes.h  binsert.c  bitfields.c  bitio.c  cdaccess.c  cl.h  cl_endian.c  cl_endian.h  class-mapping.c  corpus.c  corpus.h  depend.mk  endian.h  globals.c  globals.h  lex.creg.c  lexhash.c  macros.c  makecomps.c  registry.tab.c  registry.tab.h  registry.y  registry.yy.c  registry.yy.h  regopt.c  special-chars.c  storage.c  storage.h  windows-mmap.c  windows-mmap.h
src/cwb/cqp/: ascii-print.c  builtins.c  concordance.c  concordance.h  context_descriptor.c  context_descriptor.h  corpmanag.c  corpmanag.h  cqp.c  (+34 more)
(+81 files in other folders)
